clang/test/BSC/Negative/Ownership/Owned/owned_global_typedef/owned_global_typedef.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

typedef _Owned int ownInt; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
ownInt a = 10;  //expected-error {{type of global variable cannot qualified by '_Owned', 'ownInt' (aka '_Owned int') contains '_Owned' type}}

typedef struct A {
    _Owned int a; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
}AA;

AA aa;  //expected-error {{type of global variable cannot qualified by '_Owned'(even indirectly), 'AA' (aka 'struct A') contains '_Owned' type}}

typedef _Owned struct B {
    int a;
}BB;

BB bb;  //expected-error {{type of global variable cannot qualified by '_Owned', '_Owned BB' (aka '_Owned struct B') contains '_Owned' type}}